# listasFECD-B

./: README.md  pyproject.toml
lista2/data/: aptosBH.txt
listas/lista2/data/: DadosCirculo.csv
listas/lista3/: lista3-FECD_B-Bruno Leal Fonseca.ipynb
listas/lista4/: main.py  mle.py
listas/lista6/: lista6-FECD_B-Bruno Leal Fonseca.ipynb  main.py  mle_optimization.py
listas/lista7/: exp_mle.py  link repositório.txt  lista7.ipynb  main.py
